--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,40 @@
-<h1>Dicmary</h1>
+<section class="reviews">
+  <h2>DMC Delorean Reviews</h2>
+  <ul>
+    <li>"So fast it's almost like traveling in time" (4/5)</li>
+    <li>"Coolest ride on the road" (4/5)</li>
+    <li>"I'm feeling McFly!" (5/5)</li>
+    <li>"The most futuristic ride of our day."</li>
+    <li>"80's living and I love it!" (5/5)</li>
+  </ul>
+</section>
+
+<section class="upgrades">
+  <h2>Delorean Upgrades</h2>
+  <div class="upgrade-grid">
+    <article class="upgrade-card">
+      <div class="upgrade-box">
+        <img src="images/upgrades/flux-cap.png" alt="Flux Capacitor" />
+      </div>
+      <a href="#">Flux Capacitor</a>
+    </article>
+    <article class="upgrade-card">
+      <div class="upgrade-box">
+        <img src="images/upgrades/flame.jpg" alt="Flame Decals" />
+      </div>
+      <a href="#">Flame Decals</a>
+    </article>
+    <article class="upgrade-card">
+      <div class="upgrade-box">
+        <img src="images/upgrades/bumper_sticker.jpg" alt="Bumper Stickers" />
+      </div>
+      <a href="#">Bumper Stickers</a>
+    </article>
+    <article class="upgrade-card">
+      <div class="upgrade-box">
+        <img src="images/upgrades/hub-cap.jpg" alt="Hub Caps" />
+      </div>
+      <a href="#">Hub Caps</a>
+    </article>
+  </div>
+</section>
