--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <%- include("../partials/head") %>
-  <body>
-    <div class="wrapper">
-      <%- include("../partials/header") %> <%- include("../partials/navigation")
-      %>
+  <body id="home">
+    <div class="home-box">
+      <div class="header-container">
+        <%- include("../partials/header") %>
+        <%-include("../partials/navigation")%>
+      </div>
+      <%-include("../partials/hero")%>
+      <main class="home-grid"><%- body %></main>
+      <%- include("../partials/footer") %>
     </div>
-
-    <main><%- body %></main>
-
-    <%- include("../partials/footer") %>
   </body>
 </html>
