--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,29 +12,29 @@
 <section class="upgrades">
   <h2>Delorean Upgrades</h2>
   <div class="upgrade-grid">
-    <article class="upgrade-card">
+    <div class="upgrade-card">
       <div class="upgrade-box">
         <img src="images/upgrades/flux-cap.png" alt="Flux Capacitor" />
       </div>
       <a href="#">Flux Capacitor</a>
-    </article>
-    <article class="upgrade-card">
+    </div>
+    <div class="upgrade-card">
       <div class="upgrade-box">
         <img src="images/upgrades/flame.jpg" alt="Flame Decals" />
       </div>
       <a href="#">Flame Decals</a>
-    </article>
-    <article class="upgrade-card">
+    </div>
+    <div class="upgrade-card">
       <div class="upgrade-box">
         <img src="images/upgrades/bumper_sticker.jpg" alt="Bumper Stickers" />
       </div>
       <a href="#">Bumper Stickers</a>
-    </article>
-    <article class="upgrade-card">
+    </div>
+    <div class="upgrade-card">
       <div class="upgrade-box">
         <img src="images/upgrades/hub-cap.jpg" alt="Hub Caps" />
       </div>
       <a href="#">Hub Caps</a>
-    </article>
+    </div>
   </div>
 </section>
