--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,9 +9,7 @@
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
-  font-weight: 500;
   font-style: normal;
-  font-size: 16px;
 }
 
 h1 {
@@ -23,6 +21,10 @@ h1 {
 a {
   text-decoration: none;
   color: rgb(255, 255, 255)
+}
+
+button {
+  font-size: 16px;
 }
 
 /*Navigation*/
@@ -147,11 +149,11 @@ header a:hover {
 
 /*Home*/
 
-.home-grid {
+#home-grid {
   margin: 1rem;
 }
 
-.home-grid h2 {
+#home-grid h2 {
   font-size: 2rem;
   margin-bottom: 4rem;
   font-weight: bold;
@@ -217,6 +219,133 @@ footer {
   padding: 0.5rem;
 }
 
+/* Inventory View */
+
+#inv-grid {
+  margin: 1rem;
+}
+
+#inv-grid h1 {
+  font-size: 2rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+#inv-display {
+  list-style: none;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+}
+
+
+#inv-display li {
+  list-style: none;
+  padding: 1rem;
+  border: 1px solid gray;
+  border-radius: 0.5rem;
+  background-color: #eee;
+  text-align: center;
+}
+
+#inv-display li h2 a {
+  color: #583d19;
+  font-size: 1.5rem;
+  transition: all 0.5s ease-in-out;
+}
+
+#inv-display li h2 a:hover {
+  color: #a84b0d;
+  transform: scale(1.5);
+}
+
+#inv-display img {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 0.5rem;
+}
+
+/* Car Details View */
+
+#detail-grid {
+  margin: 1rem;
+}
+
+.vehicle-detail {
+  background-color: #ececec;
+  padding: 1.5rem;
+  border-radius: 8px;
+  box-shadow: 0 12px 6px rgba(0, 0, 0, 0.1);
+  margin: 1rem auto;
+  max-width: 1200px;
+}
+
+.action-box {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 2rem;
+  justify-content: space-around;
+}
+
+.action-box button {
+  padding: .5rem;
+  color: white;
+  background-color: #411e94;
+  border: 2px solid #370e4e;
+  border-radius: .5rem;
+  flex-grow: 1;
+  transition: all 0.3s ease;
+}
+
+.action-box button:nth-child(2) {
+  color: #411e94;
+  background-color: #c8b9eb;
+  border: 2px solid #c8b9eb;
+}
+
+.action-box button:hover {
+  transform: scale(1.1);
+}
+
+.vehicle-detail h1 {
+  color: #8f2917;
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+}
+
+.summary-box h2 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.summary-box hr {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.summary-box {
+  font-size: 1rem;
+  margin-top: 1rem;
+}
+
+.summary-box p {
+  margin-bottom: 0.5rem;
+}
+
+.summary-box strong {
+  font-weight: bolder;
+}
+
+.vehicle-detail img {
+  width: 100%;
+  border-radius: 8px;
+  object-fit: cover;
+  max-height: 300px;
+  margin-bottom: 1rem;
+}
+
 @media (min-width: 900px) {
   .home-box {
     max-width: 1200px;
@@ -227,7 +356,7 @@ footer {
     background-color: white;
   }
 
-  #home main {
+  #home-grid {
     display: grid;
     gap: 4rem;
     grid-template-columns: 1fr 1fr;
@@ -270,6 +399,63 @@ footer {
     margin-left: 2rem;
     margin-right: 2rem;
     margin-top: 2rem;
+  }
+
+  #inv-display {
+    list-style: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1rem;
+  }
+
+
+  #inv-display li {
+    list-style: none;
+    padding: 1rem;
+    border: 1px solid gray;
+    border-radius: 0.5rem;
+    background-color: #eee;
+    text-align: center;
+  }
+
+  .vehicle-detail {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 1rem;
+  }
+
+  .summary-box {
+    grid-column: 1/3;
+    grid-row: 2/3;
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .vehicle-detail h1 {
+    font-size: 3rem;
+  }
+
+  .summary-box hr {
+    display: none;
+  }
+
+  .characteristics-box,
+  .description-box {
+    padding: 1rem;
+    background-color: #fafafa;
+    border-radius: 8px;
+    box-shadow: 0 12px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  .characteristics-box {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+  }
+
+  .characteristics-box h2 {
+    grid-column: 1/3;
   }
 
 }
