--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -59,6 +59,12 @@ nav ul li a:hover {
   transition: all 0.3s ease
 }
 
+/*Footer*/
+
+footer a {
+  color: #8f2917;
+}
+
 /*Header*/
 
 #top-header {
@@ -346,6 +352,31 @@ footer {
   margin-bottom: 1rem;
 }
 
+/* Error page main layout */
+#error-main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 65vh;
+  text-align: center;
+  padding: 1rem;
+}
+
+/* Style for the error title */
+#error-main h2 {
+  font-size: 3rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+  color: #333;
+}
+
+/* Style for the error message */
+#error-main h3 {
+  font-size: 1.2rem;
+  color: #666;
+}
+
 @media (min-width: 900px) {
   .home-box {
     max-width: 1200px;
@@ -456,6 +487,14 @@ footer {
 
   .characteristics-box h2 {
     grid-column: 1/3;
+  }
+
+  #error-main h2 {
+    font-size: 3rem;
+  }
+
+  #error-main h3 {
+    font-size: 1.2rem;
   }
 
 }
