--- a/views/inventory/detail.ejs
+++ b/views/inventory/detail.ejs
@@ -1,3 +1,8 @@
 <main id="detail-grid">
-  <%- vehicleHtml %>
+  <% if (title) { %>
+    <h1>
+      <%= title %>
+    </h1>
+    <% } else { res.redirect('/') } %>
+      <%- vehicleHtml %>
 </main>
