--- a/views/partials/hero.ejs
+++ b/views/partials/hero.ejs
@@ -2,14 +2,12 @@
   <picture>
     <source srcset="images/vehicles/delorean.jpg" media="(max-width: 768px)" />
     <source srcset="images/vehicles/delorean.jpg" media="(min-width: 769px)" />
-    <img
-      src="images/vehicles/delorean.jpg"
-      alt="Car Image"
-      class="hero-image"
-    />
+    <img src="images/vehicles/delorean.jpg" alt="Car Image" class="hero-image" />
   </picture>
   <div class="hero-content">
-    <h1>Welcome to CSE Motors</h1>
+    <h1>
+      <%= title %>
+    </h1>
     <section class="car-details">
       <h2>DMC Delorean</h2>
       <p>3 Cup holders</p>
