--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -25,4 +25,11 @@
                 <a href="/inv/add-inventory">Add New Inventory Item</a>
               </li>
             </ul>
+
+            <h2>Manage Inventory</h2>
+            <p>select a classification from the list to see the items belonging to the classification</p>
+            <%- classificationSelect %>
+              <table id="inventoryDisplay"></table>
+              <noscript>JavaScript must be enabled to use this page.</noscript>
 </main>
+<script src="../../js/inventory.js"></script>
