--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,13 @@
     <a href="/" title="Return to home page">CSE Motors</a>
   </span>
   <div id="tools">
-    <a title="Click to log in" href="/account/login">My Account</a>
+    <ul>
+      <% if (locals.loggedin) { %>
+        <li><a href="/account" title="Go to Dashboard">Welcome, <%= locals.accountData.account_firstname %></a></li>
+        <li><a href="/account/logout" title="Click to log out">Logout</a></li>
+        <% } else { %>
+          <li><a href="/account/login" title="Click to log in">Login</a></li>
+          <% } %>
+    </ul>
   </div>
 </header>
